# provider-hub

./: .gitignore  CONTRIBUTING.md  README.md  bootstrap.py
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  pull_request_template.md
ai-skills/: README.md
ai-skills/team/pde/resolve-duplicate-contact-alerts/: README.md  run.py
ai-skills/team/pde/setup-provider-hub/: README.md  SKILL.md  environment.py  setup.py
apis/: README.md
mcp/: README.md
mcp/team/pde/pde-jsm/: .env.example  README.md  app.py  app_config.json  requirements.txt  server.py
mcp/team/pde/pde-jsm/tools/: alerts.py  email.py  (+2 more)
plugins/pde/: .mcp.json  README.md
plugins/pde/.claude-plugin/: plugin.json
plugins/pde/hooks/: hooks.json
plugins/pde/mcp-servers/pde-jsm/: README.md  app.py  requirements.txt
plugins/pde/mcp-servers/pde-mcp/: .env.example  README.md  app.py
plugins/pde/scripts/: bootstrap-deps.sh  bootstrap-venv.sh
scripts/: README.md
services/: README.md
tools/: README.md
tools/team/pde/pde-ops-api/: README.md  __init__.py  pyproject.toml
tools/team/pde/pde-ops-api/cli/: __init__.py  __main__.py
tools/team/pde/pde-ops-api/cli/jsm/: __init__.py  command.py
tools/team/pde/pde-ops-api/email/: __init__.py  email_tool.py
tools/team/pde/pde-ops-api/jsm/: __init__.py  alerts_tool.py  client.py  config.py
tools/team/pde/pde-ops-api/jsmreport/: __init__.py  reporter.py  run_reporting_pipeline.sh  update_alert_history_snapshot.py
tools/team/pde/pde-ops-api/mail/: email_tool.py
tools/team/pde/pde-ops-api/tests/test_jsm/: test_alerts_tool.py  test_client.py
(+8 files in other folders)
